# video-use

./: .gitignore  CLAUDE.md  pyproject.toml
projects/2026-07-13-my-clip/compositions/slot_0_hook/: index.html  meta.json  package.json
projects/2026-07-13-my-clip/compositions/slot_1_article/: hyperframes.json  index.html  meta.json  package.json
projects/2026-07-13-my-clip/compositions/slot_2_buyer_math/: index.html  meta.json  package.json
projects/2026-07-13-my-clip/compositions/slot_3_stat/: index.html  meta.json  package.json
projects/2026-07-15-david-and-larry-ellison-sued-by-paramount-inv/brief/: approved-script.md
projects/2026-07-15-independent-lens-acquires-four-documentaries-/brief/: approved-script.md
projects/2026-07-16-avatar-aang-gets-a-theatrical-release-date-ex/brief/: approved-script.md
projects/2026-07-16-copyright-termination-rights-the-federal-law-/brief/: approved-script.md
projects/2026-07-16-pay-or-play-clauses-why-studios-sometimes-pay/brief/: approved-script.md
scripts/: bg-composite.sh  grade.py  new-project.sh  pip-composite.py  render.py  video-bg-composite.sh  voiceover.sh
skills/video-studio/: SKILL.md
